# EASD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml.example
easd/: __init__.py  cli.py  config.py
easd/core/: __init__.py  database.py  models.py  orchestrator.py  security_guidance.py
easd/correlation/: __init__.py  correlator.py
easd/modules/: __init__.py
easd/modules/cloud/: __init__.py  cloud_enum.py
easd/modules/domain/: __init__.py  dns_resolver.py  subdomain_enum.py
easd/modules/enrichment/: __init__.py  censys_client.py  securitytrails_client.py  shodan_client.py
easd/modules/infrastructure/: __init__.py  port_scanner.py
easd/modules/intel/: __init__.py  alienvault_otx.py  breach_check.py  builtwith.py  chaos_projectdiscovery.py  greynoise.py  ipinfo.py  passivetotal.py  shodan_internetdb.py  urlscan.py  wayback.py
easd/modules/osint/: __init__.py  employee_discovery.py  github_recon.py
easd/modules/seed/: __init__.py  asn_discovery.py  cert_transparency.py  whois_lookup.py
easd/modules/targeted/: __init__.py  resource_scanner.py
easd/modules/web/: __init__.py  http_prober.py  screenshot.py  tech_signatures.py
easd/reporting/: __init__.py  html_template.py
easd/utils/: http_client.py  network.py  rate_limiter.py  validators.py
tests/: __init__.py  test_validators.py
wordlists/: subdomains.txt
